--- a/shufflenet/config/onnx_shufflenet_build.cfg
+++ b/shufflenet/config/onnx_shufflenet_build.cfg
@@ -10,7 +10,7 @@ model_domain = image_classification
 input_model = ./models/shufflenet.onnx
 input = gpu_0/data_0
 input_shape = [1, 3, 224, 224]
-output = gpu_0/softmax_1
+output = gpu_0/pred_1
 
 [AutoQuantizationTool]
 quantize_method = SYMMETRIC
@@ -23,7 +23,7 @@ preprocess_mode = normalize
 quant_precision = int8
 
 [GBuilder]
-outputs = aipu.bin
+outputs = deploy/build/aipu.bin
 profile= True
 target=Z1_0701
 
