--- a/shufflenet/config/onnx_shufflenet_run.cfg
+++ b/shufflenet/config/onnx_shufflenet_run.cfg
@@ -10,7 +10,7 @@ model_domain = image_classification
 input_model = ./models/shufflenet.onnx
 input = gpu_0/data_0
 input_shape = [1, 3, 224, 224]
-output = gpu_0/softmax_1
+output = gpu_0/pred_1
 
 [AutoQuantizationTool]
 quantize_method = SYMMETRIC
